--- a/pages/Homepage/Homepage.html
+++ b/pages/Homepage/Homepage.html
@@ -20,11 +20,11 @@
         <div class="flex-col justify-start text-wrapper_4"><span class="font_4 text_3">Pastry</span></div>
         <img
           class="image"
-          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=95133f5730533cda4b49e6d53e54a392.png"
+          src="../../src/logo/cart.png"
         />
         <img
           class="image"
-          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=a6cc50a2af244eb3a5eba56f540f033d.png"
+          src="../../src/logo/account.png"
         />
       </div>
       <div class="flex-col group_2">
@@ -34,28 +34,28 @@
             <span class="text_5">Search...</span>
             <img
               class="shrink-0 image_2 ml-63-5"
-              src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=cf7900e3d5694c3d8bf8853672ce1b20.png"
+              src="../../src/logo/"
             />
           </div>
         </div>
         <img
           class="image_3"
-          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=0aede0d5d8a9a34330330d7ad2a9f42b.png"
+          src="../../src/imgs/homepage_teaser.png"
         />
       </div>
       <div class="flex-row equal-division">
         <img
           class="image_4 equal-division-item"
-          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=ec41afabe655ae00e20a93ecd51c1561.png"
+          src="../../src/imgs/softserving.png"
         />
         <img
           class="image_4 equal-division-item ml-63-5"
-          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=c2100ee68b8b483ee86f42e6f87d595b.png"
+          src="../../src/imgs/double.png"
         />
       </div>
       <img
         class="image_5"
-        src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=166416c27cd18c246740241ec3628dbd.png"
+        src="../../src/imgs/tail.png"
       />
       <div class="flex-row justify-center items-center group_3">
         <div class="flex-col justify-start text-wrapper"><span class="font">Delivery Policy</span></div>
