--- a/pages/Homepage/Homepage.html
+++ b/pages/Homepage/Homepage.html
@@ -7,6 +7,7 @@
     <title>codefun</title>
     <link rel="stylesheet" href="../../index.css" />
     <link rel="stylesheet" href="./Homepage.css" />
+    <link rel="stylesheet" href="../footer.css" />
     <script type="text/javascript" src="./Homepage.js"></script>
   </head>
   <body>
@@ -57,17 +58,17 @@
         class="image_5"
         src="../../src/imgs/tail.png"
       />
-      <div class="flex-row justify-center items-center group_3">
-        <div class="flex-col justify-start text-wrapper"><span class="font">Delivery Policy</span></div>
-        <div class="flex-col items-start group_4">
-          <span class="font_2">Return & Refund</span>
-          <div class="divider"></div>
+      <div class="flex-row justify-center items-center footer-container">
+        <div class="flex-col justify-start footer-item-0"><span class="footer-item-0-text">Delivery Policy</span></div>
+        <div class="flex-col items-start footer-item-1">
+          <span class="footer-item-1-text">Return & Refund</span>
+          <div class="footer-item-1-divider"></div>
         </div>
-        <div class="flex-col items-start self-stretch group_5">
-          <span class="font">Privacy Policy</span>
-          <div class="shrink-0 divider_2"></div>
+        <div class="flex-col items-start self-stretch footer-item-2">
+          <span class="footer-item-2-text">Privacy Policy</span>
+          <div class="shrink-0 footer-item-2-divider"></div>
         </div>
-        <div class="flex-col justify-start text-wrapper_5"><span class="font_3 text_6">Contact Us</span></div>
+        <div class="flex-col justify-start footer-item-3"><span class="footer-item-3-text footer-item-3-text-detail">Contact Us</span></div>
       </div>
     </div>
   </body>
