--- a/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.html
+++ b/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>codefun</title>
+  <title>Order Confirmation</title>
   <link rel="stylesheet" href="../../index.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
+  <link rel="stylesheet" href="./Confirmation_of_Purchase.css" />
+  <script type="text/javascript" src="./Confirmation_of_Purchase.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           src="../../src/logo/cart.png" /></a>
       <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
     </div>
-
+  
     <div class="flex-col banner-container">
       <div class="flex-row justify-between items-center banner-content">
         <span class="banner-text">Order before 2:00pm For Next-Day Home Delivery</span>
@@ -42,15 +42,15 @@
       </div>
     </div>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
+    <!-- Main Content -->
+    <div class="main-content">
+      <div class="confirmation-message-container">
+        <h2 class="confirmation-title">Thank you !</h2>
+        <button class="confirmation-button">VIEW ORDER CONFIRMATION</button>
+      </div>
+      <img class="confirmation-image"
+        src="../../src/imgs/tail.png" />
     </div>
-
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
 
     <div class="flex-row footer-container">
       <div class="flex-col footer-item">
@@ -70,7 +70,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
