--- a/pages/Contact_Us_Page/Contact_Us_Page.html
+++ b/pages/Contact_Us_Page/Contact_Us_Page.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>codefun</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="../../index.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
+  <link rel="stylesheet" href="./Contact_Us_Page.css" />
 </head>
 
 <body>
@@ -42,16 +40,22 @@
       </div>
     </div>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
-    </div>
 
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
+    <!-- Contact Form -->
+    <main class="main-content">
+      <h2>Contact Us</h2>
+      <input class="input-box" type="email" placeholder="Email" />
+      <textarea class="textarea-box" placeholder="What would you like us to know?"></textarea>
+      <button class="submit-button">Send</button>
 
+      <p class="social-invite">Follow LeTAO for new arrivals and special offers!</p>
+      <div class="social-icons">
+        <img src="../../src/logo/instagram.png" alt="Instagram" />
+        <img src="../../src/logo/facebook.png" alt="Facebook" />
+      </div>
+    </main>
+
+    <!-- Footer -->
     <div class="flex-row footer-container">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
@@ -70,7 +74,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
