--- a/pages/content_pages/Privacy_Policy.html
+++ b/pages/content_pages/Privacy_Policy.html
@@ -8,9 +8,9 @@
   <title>codefun</title>
   <link rel="stylesheet" href="../../index.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
+  <link rel="stylesheet" href="./content.css" />
+  <script type="text/javascript" src="./Privacy_Policy.js"></script>
 </head>
 
 <body>
@@ -41,17 +41,25 @@
         </div>
       </div>
     </div>
+    <div class="title">“Return & Refund”</div>
+    <div class="content">
+      <h2>Thank you for purchasing with LeTAO</h2>
+      <p>We aim to do everything possible to satisfy our customers. If you received a damaged or defective product we
+        will gladly organise an exchange, free of charge or refund by returning the original products. Please request
+        an exchange or refund within 48 hours of receiving your LeTAO product. Include your order number and any
+        supporting information about the defect, including a photo if possible.</p>
+      <p>On receipt of your email, we will review your complaint and contact you about organising a free exchange or
+        refund.</p>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
+      <h2>Delivery Errors & Damages</h2>
+      <p>Upon receiving it, kindly inspect your order and contact us immediately if you have received the wrong item
+        or it is damaged in some way. If you receive the wrong item so that we can evaluate the issue and make it
+        right.</p>
+
+      <p>If you have any questions, feel free to get in contact via our Online Chat, call us on 0404 76 1888 or email
+        us at enquiries@LeTAOaustralia.com.</p>
     </div>
-
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
-
+    
     <div class="flex-row footer-container">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
@@ -70,7 +78,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
