--- a/pages/login/Login_Page.html
+++ b/pages/login/Login_Page.html
@@ -8,9 +8,10 @@
   <title>codefun</title>
   <link rel="stylesheet" href="../../index.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
+  <link rel="stylesheet" href="./content.css" />
+  <link rel="stylesheet" href="./login.css" />
+  <script type="text/javascript" src="./Login_Page.js"></script>
 </head>
 
 <body>
@@ -42,35 +43,33 @@
       </div>
     </div>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
+    <div class="main-content">
+      <h2>Customer Login</h2>
+      <input class="input-box" type="email" placeholder="Email" />
+      <input class="input-box" type="password" placeholder="Password" />
+      <button class="login-button">Login</button>
     </div>
-
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
-
-    <div class="flex-row footer-container">
-      <div class="flex-col footer-item">
-        <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
+    <img class="store-image"
+      src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=166416c27cd18c246740241ec3628dbd.png" />
+      
+      <div class="flex-row footer-container">
+        <div class="flex-col footer-item">
+          <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
+        </div>
+        <div class="flex-col  footer-item">
+          <a href="../content_pages/Return_Refund.html"> <span class="footer-item-text">Return & Refund</span> </a>
+          <div class="footer-item-divider"></div>
+        </div>
+        <div class="flex-col footer-item">
+          <a href="../content_pages/Privacy_Policy.html"><span class="footer-item-text">Privacy Policy</span> </a>
+          <div class="shrink-0 footer-item-divider"></div>
+        </div>
+        <div class="flex-col  footer-item">
+          <a href="../Contact_Us_Page/Contact_Us_Page.html">
+            <span class="footer-item-text">Contact Us</span> </a>
+        </div>
       </div>
-      <div class="flex-col  footer-item">
-        <a href="../content_pages/Return_Refund.html"> <span class="footer-item-text">Return & Refund</span> </a>
-        <div class="footer-item-divider"></div>
-      </div>
-      <div class="flex-col footer-item">
-        <a href="../content_pages/Privacy_Policy.html"><span class="footer-item-text">Privacy Policy</span> </a>
-        <div class="shrink-0 footer-item-divider"></div>
-      </div>
-      <div class="flex-col  footer-item">
-        <a href="../Contact_Us_Page/Contact_Us_Page.html">
-          <span class="footer-item-text">Contact Us</span> </a>
-      </div>
-    </div>
   </div>
-
 </body>
 
 </html>
