--- a/pages/product_details/Product_Detail_Page.html
+++ b/pages/product_details/Product_Detail_Page.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>codefun</title>
+  <title>LeTAO — Fromage Double</title>
+  <link rel="stylesheet" href="Product_Detail_Page.css" />
   <link rel="stylesheet" href="../../index.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
 </head>
 
 <body>
@@ -42,15 +41,58 @@
       </div>
     </div>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
-    </div>
+    <main class="product-detail">
+      <div class="images">
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=c866c03323c534ab02035232633fc05d.png"
+          alt="Fromage Double" />
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=80cd393e7b4d75a27b4b2aef42c8826e.png"
+          alt="Slice view" />
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=a4cf8fc8767627ba8fd3d49910dea976.png"
+          alt="Branded shot" />
+      </div>
+      <div class="details">
+        <h1>Fromage Double</h1>
+        <p class="price">$43.99</p>
 
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
+        <p>
+          Pickup available at
+          <strong>Melbourne 238 Swanston Street Store</strong>.
+          Usually ready in 1 hour.
+        </p>
+        <a href="#" class="check-availability">Check availability in other stores</a>
+
+        <p>Our signature creation, The Fromage Double is a must try.</p>
+        <p>
+          With a track record of 25 million pieces sold globally, it is no secret
+          that our Fromage Double Cheesecake is LeTAO’s best seller.
+        </p>
+        <p>
+          A super rich blend of Hokkaido cream, Italian mascarpone and Australian
+          cream cheese on a light and silky base, finished with a crumbly no-bake topping.
+        </p>
+        <p>A melt in the mouth cheesecake that’s guaranteed to delight.</p>
+
+        <p><strong>Net Weight:</strong> 330g (Diameter: 12CM)</p>
+        <p>
+          <strong>Ingredients:</strong>
+          Fresh cream (Contains milk), Cream cheese, Sugar, Whole eggs,
+          Mascarpone cheese, Wheat flour (Contains gluten), Egg yolk, Gelatin,
+          Stabilizer (Locust bean gum E410)
+        </p>
+        <p>
+          <strong>Allergen Information:</strong>
+          This product contains wheat, gluten, soy, egg, and milk.
+        </p>
+
+        <p class="origin">MADE IN HOKKAIDO, JAPAN WITH LOVE.</p>
+
+        <button class="btn-add">Add to Cart</button>
+      </div>
+    </main>
+
 
     <div class="flex-row footer-container">
       <div class="flex-col footer-item">
@@ -70,7 +112,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
