--- a/pages/product_details/Product_Detail_Page_1.html
+++ b/pages/product_details/Product_Detail_Page_1.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>codefun</title>
+  <title>LeTAO — Jersey Milk Roll</title>
   <link rel="stylesheet" href="../../index.css" />
+  <link rel="stylesheet" href="Product_Detail_Page.css" />
   <link rel="stylesheet" href="../head.css" />
-  <link rel="stylesheet" href="./Homepage.css" />
   <link rel="stylesheet" href="../footer.css" />
-  <script type="text/javascript" src="./Homepage.js"></script>
+  <script type="text/javascript" src="./Product_Detail_Page_1.js"></script>
 </head>
 
 <body>
@@ -42,15 +42,53 @@
       </div>
     </div>
 
-    <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
-    </div>
+    <main class="product-detail">
+      <div class="images">
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=4c5746a01462492031470f61fc0cc8b1.png"
+          alt="Jersey Milk Roll" />
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=397a29b109e6f70a9f98f6091c5ef330.png"
+          alt="Slice view" />
+        <img
+          src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=011f84d1961e9ba04869c90ab2fe8b60.png"
+          alt="Branded shot" />
+      </div>
+      <div class="details">
+        <h1>Jersey Milk Roll</h1>
+        <p class="price">$33.99</p>
 
-    <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
-    </div>
-    <img class="main_image" src="../../src/imgs/tail.png" />
+        <p>
+          Pickup available at
+          <strong>Melbourne 238 Swanston Street Store</strong>.
+          Usually ready in 1 hour.
+        </p>
+        <a href="#" class="check-availability">Check availability in other stores</a>
+
+        <p>The cream in our Jersey Milk Roll comes from a herd of Jersey cows in the Tokachi prefecture of Hokkaido.</p>
+        <p>
+          The Jersey milk we use in our Jersey Milk Roll is unique for its high butterfat content which makes
+          for a thick, luxurious cream. This rich cream is rolled in a sponge cake that is both fluffy and
+          moist.
+        </p>
+
+        <p><strong>Net Weight:</strong> 213g</p>
+        <p>
+          <strong>Ingredients:</strong>
+          Fresh cream (contains cows’ milk), Whole Eggs, Sugar, Wheat flour (contains gluten), Starch syrup,
+          Sesame oil, Condensed milk powder, Trehalose, Polysaccharide thickener (Xanthan gum/E415,
+          Carrageenan/E407), Emulsifier (contains soy, Lecithin/E322), Essence, Sodium metaphosphate/E452)
+        </p>
+        <p>
+          <strong>Allergen Information:</strong>
+          This product contains wheat, gluten, soy, egg, and milk.
+        </p>
+
+        <p class="origin">MADE IN HOKKAIDO, JAPAN WITH LOVE.</p>
+
+        <button class="btn-add">Add to Cart</button>
+      </div>
+    </main>
 
     <div class="flex-row footer-container">
       <div class="flex-col footer-item">
@@ -70,7 +108,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
